--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.1.1
   firebase_database: ^10.0.4
+  firebase_auth: ^4.1.1
 
 dev_dependencies:
   flutter_test:
