--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.1.1
   firebase_database: ^10.0.4
   firebase_auth: ^4.1.1
+  currency_text_input_formatter: ^2.1.8
 
 dev_dependencies:
   flutter_test:
