--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_database: ^10.0.4
   firebase_auth: ^4.1.1
   currency_text_input_formatter: ^2.1.8
+  cached_network_image: ^3.2.2
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.6
 
 dev_dependencies:
   flutter_test:
